stylereg.css
body {
	background-color:cadetblue;
}
h1{
    font-family: Candara;
    position: absolute;
    top: 2px;
    left: 210px;
}
.msg {
    font-family: Candara;
    position: absolute;
    top: 100px;
    left: 40%;
}
input[type=submit] {
	width: 100%;
	background-color: #9CC7D5;
    font-family: Gadugi;
	color: ghostwhite;
	padding: 14px 20px;
	margin: 8px 0;
	border: none;
	border-radius: 4px;
	cursor: pointer;
}
input[type=submit]:hover {
	width: 100%;
	background-color: #8BB6C4;
    font-family: Gadugi;
	color: ghostwhite;
	padding: 14px 20px;
	margin: 8px 0;
	border: none;
	border-radius: 4px;
	cursor: pointer;
}
input[type=reset] {
	width: 100%;
	background-color: #9CC7D5;
    font-family: Gadugi;
	color: ghostwhite;
	padding: 14px 20px;
	margin: 8px 0;
	border: none;
	border-radius: 4px;
	cursor: pointer;
}
input[type=reset]:hover {
	width: 100%;
	background-color: #8BB6C4;
    font-family: Gadugi;
	color: ghostwhite;
	padding: 14px 20px;
	margin: 8px 0;
	border: none;
	border-radius: 4px;
	cursor: pointer;
}
.checkUsername {
    font-family: Gadugi;
    position: absolute;
    top: 300px;
    left: 40%;
}
.names{
    position: absolute;
    top: 0;
    left: 40%;
}
.firstName {
    font-family: Gadugi;
    position: absolute;
    top: 240px;
    left: 40%;
}
.lastName {
    font-family: Gadugi;
    position: absolute;
    top: 240px;
    left: 50%;
}
.col-sm-4 {
    font-family: Gadugi;
    position: absolute;
    top: 360px;
    left: 40%;
}
.col-sm-44 {
    font-family: Gadugi;
    position: absolute;
    top: 420px;
    left: 40%;
}
.chooseUser {
    font-family: Gadugi;
    position: absolute;
    top: 480px;
    left: 40%;
}
.returnLoginButton{
    position: absolute;
    top: 14px;
    right: 10%;
}
.rectangle {
    position: absolute;
    top: 0px;
    left: 0px;
    height: 90px;
    width: 100%;
    background-color: ghostwhite;
}

